--- a/public/templates/results.html
+++ b/public/templates/results.html
@@ -21,7 +21,7 @@
               <h3>{{person.eye}} eyes</h3>
             </td>
             <td align="center">
-              <h3>{{person.ocupation}}</h3>
+              <h3>{{person.occupation}}</h3>
             </td>
           </tr>
           <tr>
@@ -30,9 +30,6 @@
             </td>
             <td align="center">
               <h3>Living in {{person.living}}</h3>
-            </td>
-            <td align="center">
-              <h3>Wealth {{person.money}}</h3>
             </td>
           </tr>
         </table>
