--- a/public/main.less
+++ b/public/main.less
@@ -137,7 +137,7 @@ img
 }
 body {
   background-repeat: repeat-y;
-  background-size:cover;
+  background-size: 100% 116%;
 }
 .panel
 {
@@ -177,4 +177,12 @@ table {
  }
 .notlast {
   border-bottom: 1px solid white;
+}
+.logo {
+    position: absolute;
+    left: 55%;
+    top: 38%;
+    width: 500px;
+    height: 350px;
+    opacity: 0.6;
 }
