--- a/public/templates/register.html
+++ b/public/templates/register.html
@@ -1,4 +1,6 @@
 <div class="container">
+  <div class="row buffer"></div>
+  <div class="row buffer"></div>
   <div class="col-md-5 panel">
     <h3 style="text-align: center;">Let others find you</h3>
     <br>
@@ -64,5 +66,5 @@
       <button type="button" ng-click="register()" class="btn btn-info" style="width: 40%;">Register</button>
     </div>
   </div>
-
+  <img src="../images/logo.png"/ class="logo">
 </div>
